# Roam_Agent

./: .gitignore  Makefile  README.md  package-lock.json  package.json  tree.txt
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/src/: main.py
backend/src/core/: settings.py
backend/src/db/: postgresql.py
backend/src/db/models/: base.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Features.tsx  FloatingNodes.tsx  Hero.tsx  Navigation.tsx
frontend/src/lib/: constants.ts
public/: demo.webm
src/app/: layout.tsx  page.tsx
src/app/(pages)/chat/: page.tsx
src/app/(pages)/chat/_components/: AgentGraphDialog.tsx  ChatNavigation.tsx  CodeGenerationDialog.tsx  ConfigureAgentDialog.tsx  DeploymentDialog.tsx  FloatingButton.tsx  LLMAPIDialog.tsx  MessageBubble.tsx  WelcomeDialog.tsx
src/app/api/chat/: route.ts
src/components/: Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx
src/lib/: agent-utils.ts  constants.ts  types.ts
