[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MR-GREEN1337"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = ">=0.115.6,<0.116.0"
pydantic-ai = ">=0.0.18,<0.0.19"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"